<resources>
    <string name="app_name">Detailing Leiria</string>
    <string name="txt_email">Insira o email</string>
    <string name="txt_username">Insira um username</string>
    <string name="txt_password">Insira a Palavra-Passe</string>
    <string name="txt_confirm_password">Repita a Palavra-Passe</string>
    <string name="txt_register">Registar</string>

    <string name="contact_us">Contacte-nos</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="message">Mensagem</string>
    <string name="submit">Enviar</string>

    <string name="filters">Filtros</string>
    <string name="search_hint">Pesquisar</string>
    <string name="add_to_cart">Adicionar</string>

    <string name="title_faturas">Lista de faturas</string>
    <string name="download_icon">Download fatura</string>
    <string name="txt_perfil">Perfil</string>
    <string name="txt_about">Sobre nós</string>
    <string name="txt_contactos">Contactos</string>

    <string name="ndOpen">Open Navigation Drawer</string>
    <string name="ndClose">Close Navigation Drawer</string>
    <string name="txt_login">Login</string>

    <!-- Perfil -->
    <string name="title_perfil">Perfil</string>
    <string name="nome_label">Nome:</string>
    <string name="telefone_label">Telefone:</string>
    <string name="morada_label">Morada:</string>
    <string name="alterar_dados_button">Alterar dados</string>

    <!-- Perfil - Editar Dados -->
    <string name="editar_dados_title">Editar Dados</string>
    <string name="label_email">Email:</string>
    <string name="label_nome">Nome:</string>
    <string name="label_telefone">Telefone:</string>
    <string name="label_morada">Morada:</string>
    <string name="buttonSave">Guardar</string>
    <string name="btnCancel">Cancelar</string>


    <!-- Detalhes da Fatura -->
    <string name="details_invoice">Detalhes da Fatura #</string>
    <string name="product_name">Spray limpa vidros</string>
    <string name="unit_price">Preço unitário:</string>
    <string name="quantity">Unidades:</string>
    <string name="total_price">Total:</string>
    <string name="email_label">E-mail:</string>
    <string name="phone_label">Telefone:</string>
    <string name="address_label">Morada:</string>
    <string name="delivery_method">Método de Entrega:</string>
    <string name="payment_method">Método de Pagamento:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Imposto:</string>
    <string name="final_price">Preço final:</string>
    <string name="date_label">Data:</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_loja">Loja</string>

    <!-- Detalhes do PRODuta -->
    <string name="detalhe_produto">Detalhes do Produto</string>
    <string name="menu_icon">Ícone do menu</string>
    <string name="logo_description">Logo da aplicação</string>
    <string name="produto_img">Imagem do produto</string>
    <string name="adicionar_carrinho">Adicionar ao Carrinho</string>
    <string name="favorito">Adicionar aos Favoritos</string>
    <string name="detalhes_titulo">Descrição do Produto:</string>
    <string name="avaliacao_media">Avaliação média:</string>
    <string name="estrela">Estrela</string>
    <string name="avaliar">Avaliar</string>
    <string name="comentarios_titulo">Comentários</string>
    <string name="comentario1">user1: Produto excelente!</string>
    <string name="comentario2">user2: Gostei bastante!</string>


    <!-- Carrinho -->
    <string name="remover_item">Remover item do carrinho</string>
    <string name="metodo_entrega">Método de entrega</string>
    <string name="metodo_pagamento">Método de pagamento</string>
    <string name="carrinho_compras">Carrinho</string>
    <string name="dados_compra_titulo">Dados da compra</string>
    <string name="metodo_entrega_titulo">Método de entrega</string>
    <string name="metodo_pagamento_titulo">Método de pagamento</string>
    <string name="preco_final">Preço final: %1$s</string>
    <string name="confirmar_compra">Confirmar compra</string>
    <string name="txt_carrinho">Carrinho</string>
    <string name="txt_finalizar_compra">Finalizar Compra</string>
    <string name="txt_visitante">Visitante</string>


</resources>
