<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group  android:checkableBehavior="single">
        <item android:id="@+id/navPerfil"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/txt_perfil" />
        <item android:id="@+id/navLoja"
            android:icon="@drawable/ic_action_loja"
            android:title="@string/txt_loja" />
        <item android:id="@+id/navFavoritos"
            android:icon="@drawable/ic_action_favorito"
            android:title="Favoritos" />
        <item android:id="@+id/navCarrinho"
            android:icon="@drawable/ic_action_carrinho"
            android:title="@string/txt_carrinho" />
        <item android:id="@+id/navFaturas"
            android:icon="@drawable/fatura"
            android:title="Faturas" />
        <item android:id="@+id/navContactos"
            android:icon="@drawable/ic_action_contactos"
            android:title="@string/txt_contactos" />
        <item android:id="@+id/navAbout"
            android:icon="@drawable/ic_action_about"
            android:title="@string/txt_about" />
        <item android:id="@+id/navLogout"
            android:icon="@drawable/logout"
            android:title="Logout" />
    </group>
</menu>