<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Título -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editar_dados_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Campo para Email -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Insira o novo email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="8dp" />

    <!-- Campo para Nome -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_nome"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Insira o novo nome"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp" />

    <!-- Campo para Telefone -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_telefone"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Insira o novo telefone"
        android:inputType="phone"
        android:layout_marginBottom="8dp" />

    <!-- Campo para Morada -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_morada"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextMorada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Insira a nova morada"
        android:inputType="textPostalAddress"
        android:layout_marginBottom="16dp" />

    <!-- Botões -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/buttonSave"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/btnCancel"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
