<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFFFFF"
    tools:context=".RegisterActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        app:srcCompat="@drawable/dl_logo" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txt_email"
        android:ems="10"
        android:inputType="text"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txt_username"
        android:ems="10"
        android:inputType="text"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/etMorada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Insira a morada"
        android:ems="10"
        android:inputType="text"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/etTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Insira o n.º de telefone"
        android:ems="10"
        android:inputType="text"
        android:layout_marginBottom="20dp" />

    <!-- Espaço entre campos e botão -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00B4FD"
        android:onClick="onClickRegister"
        android:text="@string/txt_register"
        android:textColor="#FFFFFF" />

    <!-- Espaço extra em baixo de tudo no final -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

</LinearLayout>
